# trio_binning

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  find-unique-kmers  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-package.yml
c/: Makefile  hapB.txt  kmers.c
src/: classify.rs  fasta.rs  file.rs  kmer.rs  lib.rs  main.rs  seq.rs  threads.rs
src/seq/: fasta.rs  fastq.rs  mod.rs
src/trio_binning/: classify_by_alignment.py  classify_by_kmers.py  find_unique_kmers.py  kmers.py  kmers_c_test.py  seq.py
tests/: test_classify_by_kmers.py  test_kmers.py  test_seq.py
tests/data/: hapA.fastq  hapA.txt  hapB.txt  test.fa  test.fastq
trio_binning/: kmers.py  kmers_c_test.py
