[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trio_binning"
version = "1.0.0"
dependencies = [
    "mappy",
]

[project.optional-dependencies]
test = ["pytest"]
devel = ["flake8", "mypy", "black", "isort"]

[project.scripts]
find-unique-kmers = "trio_binning.find_unique_kmers:main"
classify-by-kmers = "trio_binning.classify_by_kmers:main"
classify-by-alignment = "trio_binning.classify_by_alignment:main"

[tool.isort]
profile = "black"
